--- a/package.json
+++ b/package.json
@@ -10,18 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chakra-ui/color-mode": "^2.2.0",
     "@chakra-ui/modal": "^2.3.1",
     "@chakra-ui/react": "^2.10.5",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@monaco-editor/react": "^4.7.0",
-    "chart.js": "^4.4.7",
+    "chart.js": "^4.4.8",
     "framer-motion": "^10.18.0",
+    "jspdf": "^3.0.0",
+    "natural": "^8.0.1",
+    "openai": "^4.85.3",
+    "pdfjs-dist": "^4.10.38",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.10.1",
+    "react-icons": "^4.12.0",
     "react-pdf": "^9.2.1",
     "react-scroll": "^1.8.9"
   },
